pipleine names should be different

--- a/pipelines/vault-destroy.yml
+++ b/pipelines/vault-destroy.yml
@@ -1,6 +1,6 @@
 format_version: 10
 pipelines:
-  vault:
+  vault-destroy:
     group: expense
     label_template: ${COUNT}
     lock_behavior: none
