--- a/pipelines/vault-create.yml
+++ b/pipelines/vault-create.yml
@@ -27,6 +27,6 @@ pipelines:
             timeout: 0
             tasks:
             - exec: { command: terraform, arguments: ["init"], run_if: passed }
-            - exec: { command: terraform, arguments: ["destroy","-auto-approve"], run_if: passed }
+            - exec: { command: terraform, arguments: ["apply","-auto-approve"], run_if: passed }
 
 
