--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -3,5 +3,5 @@
   tasks:
     - name: get secrets
       ansible.builtin.debug:
-        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token=hvs.RTDXtStxH3G1DIGzKWmDmojA url=http://3.84.209.151:8200')}}"
+        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token=hvs.RTDXtStxH3G1DIGzKWmDmojA url=https://3.84.209.151:8200')}}"
 
