--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -3,5 +3,5 @@
   tasks:
     - name: get secrets
       ansible.builtin.debug:
-        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token=hvs.4Vrgr2G1dKcXtqr1TjEyRkMO url=https://54.92.160.9:8200 validate_certs=false')}}"
+        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.92.160.9:8200 validate_certs=false')}}"
 
