--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -1,8 +1,7 @@
 - name: get vault secrets
   hosts: localhost
-  become: true
   tasks:
     - name: get secrets
       ansible.builtin.debug:
-        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.92.160.9:8200 validate_certs=false')}}"
+        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.92.160.9:8200 validate_certs=False')}}"
 
