--- a/pipelines/vault-ansible-create.yml
+++ b/pipelines/vault-ansible-create.yml
@@ -26,6 +26,6 @@ pipelines:
           vault-ansible-job:
             timeout: 0
             tasks:
-            - exec: { command: ansible-playbook, arguments: ["-i","54.92.160.9,","get_secrets.yml","-e","vault_token","-e","ansible_user=ec2-user","-e","ansible_password=DevOps321"], run_if: passed }
+            - exec: { command: bash, arguments: ["ansible.sh"], run_if: passed }
 
 
