get vault token from pipelines

--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -4,7 +4,7 @@
     - name: get secrets
       ansible.builtin.shell: echo "{{ lookup('ansible.builtin.env', vault_token)}}"
 
-    - name: get secrets
-      ansible.builtin.debug:
-        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.92.160.9:8200 validate_certs=False')}}"
+#    - name: get secrets
+#      ansible.builtin.debug:
+#        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.92.160.9:8200 validate_certs=False')}}"
 
