--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -2,9 +2,9 @@
   hosts: localhost
   tasks:
     - name: get secrets
-      ansible.builtin.shell: echo "{{ lookup('ansible.builtin.env', vault_token)}}"
+      ansible.builtin.shell:  "{{ lookup('ansible.builtin.env', vault_token)}}" >/tmp/1
 
-    - name: get secrets
-      ansible.builtin.debug:
-        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.198.83.170:8200 validate_certs=False')}}"
+#    - name: get secrets
+#      ansible.builtin.debug:
+#        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{vault_token}} url=https://54.198.83.170:8200 validate_certs=False')}}"
 
