--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   tasks:
     - name: get secrets
-      ansible.builtin.shell:  "{{ lookup('ansible.builtin.env', vault_token)}}" >/tmp/1
+      ansible.builtin.shell:  echo "{{ lookup('ansible.builtin.env', 'vault_token')}}" >/tmp/1
 
 #    - name: get secrets
 #      ansible.builtin.debug:
