get vault token and store tmp variable....

--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -3,10 +3,10 @@
   tasks:
 #    - name: get secrets
 #      ansible.builtin.debug:
-#        msg: echo "{{ lookup('ansible.builtin.env', 'vault_token')}}" >/tmp/1
+#        msg: echo "{{ lookup('ansible.builtin.env', 'vault_token')}} >/tmp/1"
 
     - name: get secrets
-      ansible.builtin.shell: "{{ lookup('ansible.builtin.env', 'vault_token')}}" >/tmp/1
+      ansible.builtin.shell: " echo {{ lookup('ansible.builtin.env', 'vault_token')}} >/tmp/1"
 
 #    - name: get secrets
 #      ansible.builtin.debug:
