--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -1,12 +1,12 @@
 - name: get vault secrets
   hosts: localhost
   tasks:
-#    - name: get secrets
-#      ansible.builtin.debug:
-#        msg: echo "{{ lookup('ansible.builtin.env', 'vault_token')}} >/tmp/1"
+    - name: get secrets
+      ansible.builtin.debug:
+        msg: "echo {{ lookup('ansible.builtin.env', 'vault_token')}} >/tmp/1"
 
     - name: get secrets
-      ansible.builtin.shell: " echo {{ secrets }} >/tmp/1"
+      ansible.builtin.shell: " echo {{ secrets }}"
 
 #    - name: get secrets
 #      ansible.builtin.debug:
