added double quotes....

--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -1,5 +1,7 @@
 - name: get vault secrets
   hosts: localhost
+  vars:
+    vault_token:
   tasks:
     - name: get secrets
       ansible.builtin.debug:
