--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -8,7 +8,7 @@
         msg: "echo {{ lookup('ansible.builtin.env', 'vault_token')}} >/tmp/1"
 
     - name: get secrets
-      ansible.builtin.shell: " echo {{ vault_token }}"
+      ansible.builtin.shell: " echo {{ message }}"
 
 #    - name: get secrets
 #      ansible.builtin.debug:
