--- a/pipelines/vault-ansible-create.yml
+++ b/pipelines/vault-ansible-create.yml
@@ -26,6 +26,6 @@ pipelines:
           vault-ansible-job:
             timeout: 0
             tasks:
-            - exec: { command: ansible-playbook, arguments: ["-i","172.31.37.141,","get_secrets.yml","-e","ansible_user=ec2-user","-e","ansible_password=DevOps321"], run_if: passed }
+            - exec: { command: ansible-playbook, arguments: ["-i","172.31.37.141,","expense.yml","-e","expense_name=vault","-e","ansible_user=ec2-user","-e","ansible_password=DevOps321"], run_if: passed }
 
 
