--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -1,3 +1,7 @@
 - name: get secrets
   ansible.builtin.debug:
     msg: "echo {{ message }}"
+
+- name: get vault credentials
+  ansible.builtin.debug:
+    msg: echo {{ vault_token }}
