--- a/roles/vault/vars/main.yml
+++ b/roles/vault/vars/main.yml
@@ -1,2 +1,2 @@
 message: "hello"
-vault_token: "{{ lookup('ansible.builtin.env', 'vault_token')}}"
+secrets: "{{ lookup('ansible.builtin.env', 'vault_token')}}"
