get message from vault....

--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -6,6 +6,6 @@
   ansible.builtin.debug:
     msg: " echo {{ secrets.message }}"
 
-#- name: get secrets
-#  ansible.builtin.debug:
-#    msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{secrets.message}} url=https://54.198.83.170:8200 validate_certs=False')}}"
+- name: get secrets
+  ansible.builtin.debug:
+    msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{secrets.message}} url=https://54.87.69.158:8200 validate_certs=False')}}"
