--- a/roles/githubactions/tasks/main.yml
+++ b/roles/githubactions/tasks/main.yml
@@ -8,3 +8,6 @@
     src: https://github.com/actions/runner/releases/download/v2.317.0/actions-runner-linux-x64-2.317.0.tar.gz
     dest: /home/ec2-user/github-runner
     remote_src: yes
+
+- name: Install Libucis dependencies
+  ansible.builtin.shell: /bin/installdependencies.sh
