Download and unarchive runner

--- a/roles/githubactions/tasks/main.yml
+++ b/roles/githubactions/tasks/main.yml
@@ -10,4 +10,4 @@
     remote_src: yes
 
 - name: Install Libucis dependencies
-  ansible.builtin.shell: ./bin/installdependencies.sh
+  ansible.builtin.shell: bin/installdependencies.sh
