--- a/roles/githubactions/tasks/main.yml
+++ b/roles/githubactions/tasks/main.yml
@@ -9,6 +9,7 @@
     src: https://github.com/actions/runner/releases/download/v2.317.0/actions-runner-linux-x64-2.317.0.tar.gz
     dest: /home/ec2-user/github-runner
     remote_src: yes
+  become_user: ec2-user
 
 - name: Install Libucis dependencies
   ansible.builtin.shell: /home/ec2-user/github-runner/bin/installdependencies.sh
