--- a/roles/githubactions/tasks/main.yml
+++ b/roles/githubactions/tasks/main.yml
@@ -14,3 +14,7 @@
 - name: Install Libucis dependencies
   ansible.builtin.shell: /home/ec2-user/github-runner/bin/installdependencies.sh
 
+- name: start Configuration
+  ansible.builtin.shell: ./config.sh --unattended --url  https://github.com/devps23/learn-expense --token {{secrets.github_action_token}}
+
+
