--- a/get_secrets.yml
+++ b/get_secrets.yml
@@ -7,7 +7,10 @@
       ansible.builtin.debug:
         msg: "echo {{ lookup('ansible.builtin.env', 'vault_token')}} >/tmp/1"
 
- #    - name: get secrets
+    - name: get secrets
+      ansible.builtin.shell: " echo {{ message }}"
+
+#    - name: get secrets
 #      ansible.builtin.debug:
 #        msg: "{{ lookup('hashi_vault', 'secret=common/data/ssh token={{secrets}} url=https://54.198.83.170:8200 validate_certs=False')}}"
 
