--- a/roles/githubactions/tasks/main.yml
+++ b/roles/githubactions/tasks/main.yml
@@ -16,7 +16,8 @@
 
 - name: vault credentials
   ansible.builtin.debug:
-    msg: "{{secrets.github_action_token}}"
+    msg: " echo {{secrets.github_action_token}}"
+
 #- name: start Configuration
 #  ansible.builtin.shell: ./config.sh --unattended --url  https://github.com/devps23/learn-expense --token {{secrets.github_action_token}}
 
